--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "java.project.sourcePaths": ["src/문자열", "src/기본 수학1", "src/기본 수학2"]
+  "java.project.sourcePaths": [
+    "src/문자열",
+    "src/기본 수학2",
+    "src/기본 수학1",
+    "src/재귀"
+  ]
 }
